<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kites-Yasmin</string>
    <string name="title_activity_main">Yasmin</string>
    <string name="title_activity_catalog">Catalogs</string>
    <string name="title_activity_product">Products</string>
    <string name="title_activity_detailProduct">Product Details</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Create Account</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_address">Shipping Address</string>
    <string name="title_activity_status">Order Status</string>
    <string name="title_activity_search">Search Results</string>
    <string name="search_title">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="text_welcome">\nKites Open Source Shopping Cart Client</string>
    <string name="text_start">Go shopping</string>
    <string name="text_check_order">Check order status</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_login1">Login to Checkout</string>
    <string name="text_login2">Login</string>
    <string name="text_create_account">Create account</string>
    <string name="text_cash_on_delivery">Cash On Delivery</string>
    <string name="text_cash_on_pickup">Cash On Pickup</string>
    <string name="text_gwallet">Google Wallet</string>
    <string name="text_paypal">Paypal</string>
    <string name="text_visa">Visa</string>
    <string name="text_master">MasterCard</string>
    <string name="text_bitcoin">Bitcoin</string>
    <string name="text_choose_payment">Select payment method</string>
    <string name="text_soon">&#8230;SOON&#8230;</string>
    <string name="text_qty">Quantity</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_shipping">Confirm your shipping address or enter a new one</string>
    <string name="text_home">Home</string>
    <string name="text_exit">Exit</string>
    <string name="text_thank_you">THANK YOU!</string>
    <string name="text_hash">###</string>
    <string name="text_one">1.0</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_x">X</string>
    <string name="text_price">Price</string>
    <string name="text_order_prcessed">Your order has been accepted.\nConsider memorizing your order number shown bellow for later use</string>
    <string name="text_orderid">Order number</string>
    <string name="text_order_staus">Your order is</string>
    <string name="category_name_placeholder">Category name</string>
    <string name="product_name_placeholder">Product name:</string>
    <string name="product_description_placeholder">Product description:</string>
    <string name="product_brand_placeholder">Product brand:</string>
    <string name="product_price_placeholder">Product price:</string>
    <string name="product_tprice_placeholder">Quantity and Total price:</string>
    <string name="product_tprice_placeholder2">Total price:</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_hint">Type your username here</string>
    <string name="login_password_hint">type your password here</string>
    <string name="register_firstname">First name</string>
    <string name="register_lastname">Last name</string>
    <string name="register_username">User name</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register_email">E-mail</string>
    <string name="register_address">Address</string>
    <string name="register_firstname_hint">Type your first name here</string>
    <string name="register_lastname_hint">Type your last name here</string>
    <string name="register_username_hint">Type your user name here</string>
    <string name="register_password_hint">Type your password here</string>
    <string name="register_repeat_password_hint">Re-type your password here</string>
    <string name="register_email_hint">Type your E-mail here</string>
    <string name="register_address_hint">Type your address here</string>
    <string name="search_hint">Product name</string>

</resources>