<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/franklin_background" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginNewAccout"
        android:alpha="0.7"
        android:background="#fff" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/registerFirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_firstname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerFirstNameLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_firstname_hint" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/registerLastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerFirstName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_lastname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerLastNameLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_lastname_hint" />

            <TextView
                android:id="@+id/registerUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerLastName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerUsernameLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_username_hint" />

            <TextView
                android:id="@+id/registerPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerUsername"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerPasswordLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/registerRepeatPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_repeat_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerRepeatPasswordLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_repeat_password_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/registerEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerRepeatPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerEmailLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/registerAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerEmail"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <EditText
                android:id="@+id/registerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerAddressLabel"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/register_address_hint"
                android:inputType="textPostalAddress" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/loginNewAccout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.8"
        android:background="#fff"
        android:onClick="createAccount"
        android:text="@string/text_create_account" />

</RelativeLayout>