<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asterphoenix.kites.yasmin.MainActivity" >

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit" />
    <item 
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/cart_icon"
        android:title="@string/title_activity_cart" />
    
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    

</menu>
