<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/franklin_background" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goHome"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="#fff" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/text_thank_you"
            android:textColor="#900"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/text_order_prcessed"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/orderID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_orderid"
                android:textColor="#950"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_hash"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/goHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goExit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:alpha="0.8"
        android:background="#fff"
        android:text="@string/text_home"
        android:onClick="onHome" />

    <Button
        android:id="@+id/goExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:background="#fff"
        android:text="@string/text_exit"
        android:onClick="onExit" />

</RelativeLayout>