<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/franklin_background"
    android:gravity="top" >

    <ScrollView
        android:id="@+id/productDetailScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eee"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="#fff" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp" >

            <ImageView
                android:id="@+id/detailProductImage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/product_description_placeholder"
                android:src="@android:drawable/ic_menu_crop" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/detailProductImage"
                android:text="@string/product_name_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <TextView
                android:id="@+id/detailProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:text="@string/product_name_placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/detailProductName"
                android:layout_marginTop="20dp"
                android:text="@string/product_description_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <TextView
                android:id="@+id/detailProductDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:text="@string/product_description_placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/loginUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/detailProductDesc"
                android:layout_marginTop="20dp"
                android:text="@string/product_brand_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <TextView
                android:id="@+id/detailProductBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/loginUsernameLabel"
                android:text="@string/product_brand_placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/loginPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/detailProductBrand"
                android:layout_marginTop="20dp"
                android:text="@string/product_price_placeholder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#950" />

            <TextView
                android:id="@+id/detailProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/loginPasswordLabel"
                android:text="@string/product_price_placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/eee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addToCart"
        android:layout_centerHorizontal="true"
        android:alpha="0.7"
        android:background="#fff"
        android:paddingLeft="20dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/product_tprice_placeholder"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#950" />

        <TextView
            android:id="@+id/detailProductQTY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/loginNewAccout"
            android:layout_alignBottom="@+id/loginNewAccout"
            android:layout_toLeftOf="@+id/loginNewAccout"
            android:text="@string/text_one"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#950" />

        <Button
            android:id="@+id/loginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_toLeftOf="@+id/detailProductQTY"
            android:alpha="0.7"
            android:background="#fff"
            android:onClick="QTYMinus"
            android:text="@string/text_minus"
            android:textSize="34sp" />

        <Button
            android:id="@+id/loginNewAccout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView5"
            android:alpha="0.7"
            android:background="#fff"
            android:onClick="QTYPlus"
            android:text="@string/text_plus"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/detailTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/loginLogin"
            android:layout_alignBottom="@+id/loginLogin"
            android:layout_alignParentLeft="true"
            android:text="@string/text_hash"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#900" />
    </RelativeLayout>

    <Button
        android:id="@+id/addToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:background="#fff"
        android:onClick="addToCart"
        android:text="@string/text_add_to_cart" />

</RelativeLayout>