<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:alpha="0.7" >
    
    <ImageView
        android:id="@+id/productImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/product_name_placeholder"/>

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/productImage"
        android:layout_toRightOf="@+id/productImage"
        android:text="@string/product_name_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/productDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/productName"
        android:layout_below="@+id/productName"
        android:text="@string/category_name_placeholder"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/productName"
        android:layout_alignBottom="@+id/productName"
        android:layout_alignParentRight="true"
        android:text="@string/text_hash"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#950" />

</RelativeLayout>
