<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/franklin_background"
    android:keepScreenOn="true" >

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="#fff" >

        <RelativeLayout
            android:id="@+id/mainRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/market_analysis_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/title_activity_main"
                android:textColor="#950"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:gravity="center"
                android:text="@string/text_welcome"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/checkOrder"
        android:layout_marginBottom="1dp"
        android:alpha="0.8"
        android:background="#fff"
        android:onClick="onStartButtonClicked"
        android:text="@string/text_start" />

    <Button
        android:id="@+id/checkOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_check_order"
        android:alpha="0.8"
        android:onClick="onStatusButtonClicked"
        android:background="#fff" />

</RelativeLayout>